# modern_tk

./: README.md  pyproject.toml  setup.py
examples/: basic_usage.py  form_example.py  theme_showcase.py
src/: __init__.py
src/core/: __init__.py  base_widget.py  event_manager.py  style_engine.py  style_resolver.py  theme_manager.py
src/effects/: __init__.py  borders.py  gradients.py  shadows.py  transitions.py
src/layouts/: __init__.py  containers.py  flex.py  grid.py  responsive.py
src/themes/: __init__.py  dark.py  default.py  fluent.py  material.py  theme_loader.py
src/utils/: __init__.py  animations.py  colors.py  fonts.py  geometry.py  icons.py  validators.py
src/widgets/: __init__.py  button.py  canvas.py  checkbox.py  entry.py  frame.py  label.py  listbox.py  progressbar.py  radiobutton.py  scrollbar.py  text.py
